[package]
name = "pyswc"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyswc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
rkyv = "0.7.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc = "0.266.36"
swc_common = "0.32.1"
swc_core = "0.83.38"
swc_ecma_ast = {version = "0.109.1", features=["serde-impl"]}
swc_ecma_transforms_base = "0.133.6"
swc_ecma_visit = "0.95.1"
swc_error_reporters = "0.16.1"
